--- a/src/index.html
+++ b/src/index.html
@@ -151,6 +151,8 @@
               <a href="#" class="map-promo__link"></a>
             </div>
           </div>
+
+          @@include('blocks/partners-promo/partners-promo.html')
         </main>
       </div>
 
