--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
             </div>
 
             <div class="row promo-catalog">
-              <div class="col-12 col-xl-4">
+              <div class="col-12 col-lg-4">
                 <a href="#" class="card-promo">
                   <div class="card-promo__description">
                     <div class="card-promo__title h3 text-dark">
@@ -118,7 +118,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-12 col-xl-4">
+              <div class="col-12 col-lg-4">
                 <a href="#" class="card-promo">
                   <div class="card-promo__description">
                     <div class="card-promo__title h3 text-dark">
@@ -130,7 +130,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-12 col-xl-4">
+              <div class="col-12 col-lg-4">
                 <a href="#" class="card-promo">
                   <div class="card-promo__description">
                     <div class="card-promo__title h3 text-dark">
@@ -153,6 +153,44 @@
           </div>
 
           @@include('blocks/partners-promo/partners-promo.html')
+
+          <div class="news-catalog__wrapper">
+            <div class="container">
+              <div class="h2 news-catalog__main-title">
+                Новости <img src="img/right-promo.svg" alt="" />
+              </div>
+
+              <div class="news-catalog row">
+                <div class="col-12 col-md-6 col-lg-4 mb-5 mb-lg-0 ">
+                  <div class="card card__article">
+                    <div class="card-header">15 ноября 2019</div>
+                    <a href="#" class="card-body">
+                      Страховой полис «Альфа Страхование» c ассистанс Савитар
+                      Груп теперь на www.saveprolife.ru
+                    </a>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-5 mb-lg-0 ">
+                  <div class="card card__article">
+                    <div class="card-header">15 ноября 2019</div>
+                    <a href="#" class="card-body">
+                      Страховой полис «Альфа Страхование» c ассистанс Савитар
+                      Груп теперь на www.saveprolife.ru
+                    </a>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-5 mb-lg-0 ">
+                  <div class="card card__article">
+                    <div class="card-header">15 ноября 2019</div>
+                    <a href="#" class="card-body">
+                      Страховой полис «Альфа Страхование» c ассистанс Савитар
+                      Груп теперь на www.saveprolife.ru
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </main>
       </div>
 
