--- a/src/insurance-case.html
+++ b/src/insurance-case.html
@@ -154,7 +154,7 @@
                     </label>
                     <div class="col-12 col-lg-6">
                       <div class="row">
-                        <div class="col-12 col-sm-6">
+                        <div class="col-12 col-lg-6">
                           <div class="form-group">
                             <div class="input-group date" id="datetimepicker3">
                               <input
@@ -194,7 +194,7 @@
                     </label>
                     <div class="col-12 col-lg-6">
                       <div class="row">
-                        <div class="col-12 col-sm-6">
+                        <div class="col-12 col-lg-6">
                           <div class="form-group">
                             <div
                               class="input-group date"
@@ -222,7 +222,7 @@
                     </label>
                     <div class="col-12 col-lg-6">
                       <div class="row">
-                        <div class="col-12 col-sm-6">
+                        <div class="col-12 col-lg-6">
                           <div class="form-group">
                             <div
                               class="input-group date"
@@ -276,17 +276,9 @@
                           </div>
                         </div>
                         <div class="col-12 text-right">
-                          <a
-                            href="#"
-                            class="text-danger"
-                            style="border-bottom: 2px dashed;"
-                          >
-                            <img
-                              src="img/location.svg"
-                              style="margin-left: -25px;"
-                              alt=""
-                            />
-                            Указать адрес на карте
+                          <a href="#" class="link-target">
+                            <img src="img/location.svg" alt="" />
+                            <span>Указать адрес на карте</span>
                           </a>
                         </div>
                       </div>
@@ -316,14 +308,14 @@
                     </label>
                     <div class="col-12 col-lg-6">
                       <div class="form-row align-items-end">
-                        <div class="col-12 col-sm-5 mb-5 mb-lg-0">
+                        <div class="col-12 col-lg-5 mb-5 mb-lg-0">
                           <input
                             type="text"
                             class="form-control"
                             placeholder="+ Х ХХХ ХХХ ХХ ХХ"
                           />
                         </div>
-                        <div class="col ml-sm-4">
+                        <div class="col ml-lg-4">
                           <div class="custom-control custom-checkbox">
                             <input
                               type="checkbox"
@@ -338,7 +330,7 @@
                             </label>
                           </div>
                         </div>
-                        <div class="col ml-sm-4">
+                        <div class="col ml-lg-4">
                           <div class="custom-control custom-checkbox">
                             <input
                               type="checkbox"
@@ -410,14 +402,14 @@
                     </label>
                     <div class="col-12 col-lg-6">
                       <div class="form-row align-items-end">
-                        <div class="col-12 col-sm-5 mb-5 mb-lg-0">
+                        <div class="col-12 col-lg-5 mb-5 mb-lg-0">
                           <input
                             type="text"
                             class="form-control"
                             placeholder="+ Х ХХХ ХХХ ХХ ХХ"
                           />
                         </div>
-                        <div class="col ml-sm-4">
+                        <div class="col ml-lg-4">
                           <div class="custom-control custom-checkbox">
                             <input
                               type="checkbox"
@@ -432,7 +424,7 @@
                             </label>
                           </div>
                         </div>
-                        <div class="col ml-sm-4">
+                        <div class="col ml-lg-4">
                           <div class="custom-control custom-checkbox">
                             <input
                               type="checkbox"
@@ -459,17 +451,9 @@
                       Загрузить фотографию электронного полиса или файл:
                     </label>
                     <div class="col-12 col-lg-6 text-right pt-5 pt-lg-0">
-                      <a
-                        href="#"
-                        class="text-danger"
-                        style="border-bottom: 2px dashed;"
-                      >
-                        <img
-                          src="img/download.svg"
-                          style="margin-left: -25px;"
-                          alt=""
-                        />
-                        Загрузить файл
+                      <a href="#" class="link-target">
+                        <img src="img/download.svg" alt="" />
+                        <span>Загрузить файл</span>
                       </a>
                     </div>
                   </div>
