--- a/src/all.html
+++ b/src/all.html
@@ -18,14 +18,24 @@
             <ul>
               <li><a href="index.html">Главная</a></li>
               <li>
-                <a href="insurance-case.html"
-                  >1 Этап. Сообщить о страховом случае</a
-                >
+                <a href="insurance-case.html">
+                  1 Этап. Сообщить о страховом случае
+                </a>
               </li>
               <li>
-                <a href="insurance-case2.html"
-                  >2 Этап. Сообщить о страховом случае</a
+                <a href="insurance-case2.html">
+                  2 Этап. Сообщить о страховом случае
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="btn btn-link"
+                  data-toggle="modal"
+                  data-target="#success"
                 >
+                  Модальное окное успеха
+                </a>
               </li>
             </ul>
           </div>
