--- a/src/blocks/page-header/page-header--static.html
+++ b/src/blocks/page-header/page-header--static.html
@@ -1,6 +1,6 @@
 <div class="page-header__inner">
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light navbar--header">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar--header">
       <div class="page-header__logo">
         <a class="navbar-brand navbar-brand--header" href="#">
           <img src="img/logo-light.svg" class="page-header__logo__img" alt="" />
