--- a/src/blocks/main-promo/main-promo.html
+++ b/src/blocks/main-promo/main-promo.html
@@ -54,10 +54,14 @@
               </div>
             </div>
             <div class="card-footer">
-              <div class="h3 card-title">
-                <span class="text-danger">Телемедицина</span>
+              <div class="h4 card-title text-danger">
+                Телемедицина
               </div>
-              <p>Не теряйте время - получите консультации врача онлайн</p>
+              <p
+                style="max-width: 190px;margin: 0 auto;margin-right: 0px;margin-bottom: 9px;margin-top: 16px;"
+              >
+                Не теряйте время - получите консультации врача онлайн
+              </p>
               <a href="#" class="btn btn-secondary">Подробнее об услугах</a>
             </div>
           </div>
@@ -80,7 +84,8 @@
                 Нашими клиентами являются FMCG компании и корпорации.
               </p>
               <p class="text-white">
-                Широкая сеть клиник более чем в 100 городах России
+                Широкая сеть клиник более чем в
+                <span class="font-alter">100</span> городах России
               </p>
 
               <a href="#" class="btn btn-secondary text-white"
