--- a/src/blocks/modal/modal.html
+++ b/src/blocks/modal/modal.html
@@ -17,12 +17,14 @@
           Ваше сообщение успешно отправлено.
         </p>
         <p class="mb-5">
-          Пожалуйста, ожидайте, координатор свяжется с Вами в ближайшие 20
+          Пожалуйста, ожидайте, координатор свяжется с Вами в ближайшие
+          <span class="font-alter">20</span>
           минут.
         </p>
         <p>
-          Если в течение 20 минут Вы не получили от нас звонка, значит нам не
-          удалось с Вами связаться. Пожалуйста, обратитесь повторно в
+          Если в течение <span class="font-alter">20</span> минут Вы не получили
+          от нас звонка, значит нам не удалось с Вами связаться. Пожалуйста,
+          обратитесь повторно в
           <a href="#" class="text-danger">Call-центр</a> удобным для Вас
           способом или напишите в диалоговое окно на нашем сайте.
         </p>
