--- a/src/blocks/page-header/page-header--static.html
+++ b/src/blocks/page-header/page-header--static.html
@@ -44,7 +44,7 @@
         <div class="page-header__info">
           <button
             type="button"
-            class="btn btn-danger btn-danger--light page-header__btn-main"
+            class="btn btn-danger bg-white text-dark page-header__btn-main"
           >
             <img src="img/lightning-promo.svg" alt="" />
             Сообщить о страховом случае
@@ -73,7 +73,7 @@
             class="btn btn-light btn-select page-header__phone"
           >
             <img src="img/phone-grey.svg" class="icon" alt="" />
-            +7 (495) 987-17-75
+            <span class="font-alter">+7 (495) 987-17-75</span>
 
             <select class="bootstrap-select bootstrap-select__promo">
               <option value="moscow">
