--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                 страховым компаниям, брокерам, корпоративным и частным клиентам
               </div>
 
-              <div class="row">
+              <div class="row group-main__row">
                 <div class="col-12 col-lg-6">
                   <div class="group-main__card">
                     <div class="group-main__card__img">
@@ -37,7 +37,9 @@
                     </div>
                     <div class="group-main__card__description">
                       <div class="h3 group-main__card__title">
-                        круглосуточный call-центр и связь в мессенджерах
+                        круглосуточный call-центр
+                        <br class="d-none d-lg-inline" />
+                        и связь в мессенджерах
                       </div>
                       <p>
                         выделенная линия в 17 странах мира для организации
