--- a/src/insurance-case.html
+++ b/src/insurance-case.html
@@ -43,11 +43,17 @@
                     экстренным случаям!
                   </p>
                   <p>
-                    Если в течение 20 минут Вы не получили от нас звонка, значит
-                    нам не удалось с Вами связаться. Пожалуйста, обратитесь
-                    повторно в
-                    <a href="#" class="text-danger">Call-центр</a> удобным для
-                    Вас способом или напишите в диалоговое окно на нашем сайте.
+                    Если в течение <span class="font-alter">20</span> минут Вы
+                    не получили от нас звонка, значит нам не удалось с Вами
+                    связаться. Пожалуйста, обратитесь повторно в
+                    <a
+                      href="#"
+                      class="text-danger"
+                      style="text-decoration: underline;"
+                      >Call-центр</a
+                    >
+                    удобным для Вас способом или напишите в диалоговое окно на
+                    нашем сайте.
                   </p>
                 </div>
               </div>
@@ -446,11 +452,11 @@
                   <div class="form-group row">
                     <label
                       for="staticEmail"
-                      class="col-12 col-lg-6 col-form-label"
+                      class="col-12 col-lg-8 col-form-label"
                     >
                       Загрузить фотографию электронного полиса или файл:
                     </label>
-                    <div class="col-12 col-lg-6 text-right pt-5 pt-lg-0">
+                    <div class="col-12 col-lg-4 text-right pt-5 pt-lg-0">
                       <a href="#" class="link-target">
                         <img src="img/download.svg" alt="" />
                         <span>Загрузить файл</span>
