--- a/src/insurance-case2.html
+++ b/src/insurance-case2.html
@@ -46,7 +46,9 @@
                     <tr>
                       <td>Номер полиса:</td>
                       <td>
-                        <span class="font-weight-bold">001-169-093412/19</span>
+                        <span class="font-weight-bold font-alter"
+                          >001-169-093412/19</span
+                        >
                       </td>
                     </tr>
                     <tr>
@@ -60,14 +62,18 @@
                     <tr>
                       <td>Период действия полиса:</td>
                       <td>
-                        <span class="font-weight-bold"
+                        <span class="font-weight-bold font-alter"
                           >с 2019-12-15 по 2020-01-17 (Годовой полис)</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Дата пересечения границы (выезд с ПМЖ):</td>
-                      <td><span class="font-weight-bold">2019-12-13</span></td>
+                      <td>
+                        <span class="font-weight-bold font-alter"
+                          >2019-12-13</span
+                        >
+                      </td>
                     </tr>
                     <tr>
                       <td>Фамилия и Имя застрахованного, кому нужна помощь:</td>
@@ -75,11 +81,19 @@
                     </tr>
                     <tr>
                       <td>Дата рождения застрахованного:</td>
-                      <td><span class="font-weight-bold">1985-12-18</span></td>
+                      <td>
+                        <span class="font-weight-bold font-alter"
+                          >1985-12-18</span
+                        >
+                      </td>
                     </tr>
                     <tr>
                       <td>Дата наступления страхового случая:</td>
-                      <td><span class="font-weight-bold">2019-12-17</span></td>
+                      <td>
+                        <span class="font-weight-bold font-alter"
+                          >2019-12-17</span
+                        >
+                      </td>
                     </tr>
                     <tr>
                       <td>Причина обращения(жалобы):</td>
@@ -93,7 +107,7 @@
                     <tr>
                       <td>Место наступления страхового случая:</td>
                       <td>
-                        <span class="font-weight-bold"
+                        <span class="font-weight-bold font-alter"
                           >Italy, Milan, Via Perugino, 12</span
                         >
                       </td>
@@ -107,7 +121,9 @@
                     <tr>
                       <td>Номер телефона для связи с застрахованным:</td>
                       <td>
-                        <span class="font-weight-bold">+7 916 777 77 77</span>
+                        <span class="font-weight-bold font-alter"
+                          >+7 916 777 77 77</span
+                        >
                         <img src="img/whatsapp.svg" class="ml-4 mr-4" alt="" />
                         <img src="img/viber.svg" alt="" />
                       </td>
@@ -117,7 +133,9 @@
                         Номер телефона застрахованного в стране проживания:
                       </td>
                       <td>
-                        <span class="font-weight-bold">+7 916 777 77 77</span>
+                        <span class="font-weight-bold font-alter"
+                          >+7 916 777 77 77</span
+                        >
                       </td>
                     </tr>
                     <tr>
@@ -131,7 +149,9 @@
                     <tr>
                       <td>Номер телефона заявителя:</td>
                       <td>
-                        <span class="font-weight-bold">+7 926 406 25 05</span>
+                        <span class="font-weight-bold font-alter"
+                          >+7 926 406 25 05</span
+                        >
                         <img src="img/whatsapp.svg" class="ml-4 mr-4" alt="" />
                         <img src="img/viber.svg" alt="" />
                       </td>
@@ -150,10 +170,17 @@
                   />
                   <label class="custom-control-label" for="defaultChecked2">
                     Я ознакомлен и согласен с
-                    <span class="text-danger">
-                      Федеральным законом РФ от 27 июля 2006 года № 152-ФЗ «О
-                      персональных данных»
-                    </span>
+                    <a
+                      href="#"
+                      class="text-danger"
+                      style="text-decoration: underline;"
+                    >
+                      Федеральным законом РФ от
+                      <span class="font-alter">27</span> июля
+                      <span class="font-alter">2006</span> года №
+                      <span class="font-alter">152-ФЗ</span> «О персональных
+                      данных»
+                    </a>
                   </label>
                 </div>
               </div>
