--- a/src/blocks/page-footer/page-footer.html
+++ b/src/blocks/page-footer/page-footer.html
@@ -73,10 +73,16 @@
             <div
               class="page-footer__main__block page-footer__main__block--address"
             >
-              <p class="text-danger">Почтовый адрес головного офиса</p>
+              <p class="text-white-50">
+                Почтовый адрес головного офиса
+              </p>
               <div class="h4 text-white">
-                Москва, 127051, пер. Большой Каретный, д.20/3 (1, 2-ой подъезд),
-                3 этаж
+                Москва, <span class="font-alter">127051</span>, пер. Большой
+                Каретный, д.<span class="font-alter">20/3</span> (<span
+                  class="font-alter"
+                  >1</span
+                >, <span class="font-alter">2</span>-ой подъезд),
+                <span class="font-alter">3</span> этаж
               </div>
             </div>
 
@@ -86,7 +92,7 @@
               <p class="text-danger text-nowrap">
                 Круглосуточная телефонная линия
               </p>
-              <a href="#" class="h3 text-white">8 (495) 987–17–75</a>
+              <a href="#" class="h3 text-white font-alter">8 (495) 987–17–75</a>
               <p class="text-white-50">в Москве</p>
             </div>
 
@@ -121,7 +127,9 @@
       <div class="container">
         <div class="page-footer__info__row">
           <div class="page-footer__info__block">
-            <p class="text-white-50">© Savitar group, 2008–2020</p>
+            <p class="text-white-50">
+              © Savitar group, <span class="font-alter">2008–2020</span>
+            </p>
           </div>
           <div class="page-footer__info__block some page-footer__info__some">
             <a href="#" class="text-white-50">Пользовательское соглашение</a>
