--- a/src/blocks/page-header/page-header.html
+++ b/src/blocks/page-header/page-header.html
@@ -58,7 +58,7 @@
             class="btn btn-light btn-select page-header__phone"
           >
             <img src="img/phone-grey.svg" class="icon" alt="" />
-            +7 (495) 987-17-75
+            <span class="font-alter">+7 (495) 987-17-75</span>
 
             <select class="bootstrap-select bootstrap-select__promo">
               <option value="moscow">
