--- a/src/blocks/partners-promo/partners-promo.html
+++ b/src/blocks/partners-promo/partners-promo.html
@@ -2,11 +2,17 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-12 col-lg-4 mb-5 mb-lg-0">
-        <div class="h2">
-          <div class="text-danger">Более 60</div>
-          партнёров
+        <div class="partners-promo__description">
+          <div class="h2">
+            <div class="text-danger">
+              Более <span class="font-alter">60</span>
+            </div>
+            партнёров
+          </div>
+          <div class="h4 text-black-50 partners-promo__text">
+            сотрудничают с нами по России и СНГ
+          </div>
         </div>
-        <div class="h4 text-black-50">сотрудничают с нами по России и СНГ</div>
       </div>
       <div class="col-12 col-lg-8">
         @@include('../slider-partners/slider-partners.html')
