--- a/src/blocks/slider-partners/slider-partners.html
+++ b/src/blocks/slider-partners/slider-partners.html
@@ -7,16 +7,17 @@
       <div class="col-6 col-md-4">
         <img src="img/logo-absolut.svg" class="slider-partners__img" alt="" />
       </div>
-      <div class="col-6 col-md-4">
+      <div class="col-6 col-md-4"></div>
+      <div class="col-6 col-md-3">
         <img src="img/logo-erv.svg" class="slider-partners__img" alt="" />
       </div>
-      <div class="col-6 col-md-4">
+      <div class="col-6 col-md-3">
         <img src="img/logo-gaide.svg" class="slider-partners__img" alt="" />
       </div>
-      <div class="col-6 col-md-4">
+      <div class="col-6 col-md-3">
         <img src="img/logo-ergo.svg" class="slider-partners__img" alt="" />
       </div>
-      <div class="col-6 col-md-4">
+      <div class="col-6 col-md-3">
         <img src="img/logo-sogaz.svg" class="slider-partners__img" alt="" />
       </div>
     </div>
