--- a/src/insurance-case2.html
+++ b/src/insurance-case2.html
@@ -186,7 +186,9 @@
               </div>
 
               <div class="insurance-artilce__total">
-                <button class="btn btn-danger">Сообщить</button>
+                <button class="btn btn-danger insurance-artilce__btn-total">
+                  Сообщить
+                </button>
               </div>
             </div>
           </div>
