--- a/src/blocks/partners-promo/partners-promo.html
+++ b/src/blocks/partners-promo/partners-promo.html
@@ -1,6 +1,6 @@
 <div class="partners-promo">
   <div class="container">
-    <div class="row align-items-center">
+    <div class="row">
       <div class="col-12 col-lg-4 mb-5 mb-lg-0">
         <div class="partners-promo__description">
           <div class="h2">
