--- a/src/insurance-case.html
+++ b/src/insurance-case.html
@@ -464,7 +464,7 @@
                     </div>
                   </div>
                   <div class="form-group text-center">
-                    <button class="btn btn-danger">
+                    <button class="btn btn-danger insurance-artilce__btn-total">
                       Сохранить и продолжить
                     </button>
                   </div>
