--- a/src/insurance-case2.html
+++ b/src/insurance-case2.html
@@ -46,8 +46,10 @@
                     <tr>
                       <td>Номер полиса:</td>
                       <td>
-                        <span class="font-weight-bold font-alter"
-                          >001-169-093412/19</span
+                        <span class="font-weight-bold "
+                          ><span class="font-alter"
+                            >001-169-093412/19</span
+                          ></span
                         >
                       </td>
                     </tr>
@@ -62,16 +64,18 @@
                     <tr>
                       <td>Период действия полиса:</td>
                       <td>
-                        <span class="font-weight-bold font-alter"
-                          >с 2019-12-15 по 2020-01-17 (Годовой полис)</span
+                        <span class="font-weight-bold"
+                          >с <span class="font-alter">2019-12-15</span> по
+                          <span class="font-alter">2020-01-17</span> (Годовой
+                          полис)</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Дата пересечения границы (выезд с ПМЖ):</td>
                       <td>
-                        <span class="font-weight-bold font-alter"
-                          >2019-12-13</span
+                        <span class="font-weight-bold"
+                          ><span class="font-alter">2019-12-13</span></span
                         >
                       </td>
                     </tr>
@@ -82,16 +86,16 @@
                     <tr>
                       <td>Дата рождения застрахованного:</td>
                       <td>
-                        <span class="font-weight-bold font-alter"
-                          >1985-12-18</span
+                        <span class="font-weight-bold"
+                          ><span class="font-alter">1985-12-18</span></span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Дата наступления страхового случая:</td>
                       <td>
-                        <span class="font-weight-bold font-alter"
-                          >2019-12-17</span
+                        <span class="font-weight-bold"
+                          ><span class="font-alter">2019-12-17</span></span
                         >
                       </td>
                     </tr>
@@ -107,8 +111,9 @@
                     <tr>
                       <td>Место наступления страхового случая:</td>
                       <td>
-                        <span class="font-weight-bold font-alter"
-                          >Italy, Milan, Via Perugino, 12</span
+                        <span class="font-weight-bold"
+                          >Italy, Milan, Via Perugino,
+                          <span class="font-alter">12</span></span
                         >
                       </td>
                     </tr>
@@ -121,8 +126,10 @@
                     <tr>
                       <td>Номер телефона для связи с застрахованным:</td>
                       <td>
-                        <span class="font-weight-bold font-alter"
-                          >+7 916 777 77 77</span
+                        <span class="font-weight-bold"
+                          ><span class="font-alter"
+                            >+7 916 777 77 77</span
+                          ></span
                         >
                         <img src="img/whatsapp.svg" class="ml-4 mr-4" alt="" />
                         <img src="img/viber.svg" alt="" />
@@ -133,8 +140,10 @@
                         Номер телефона застрахованного в стране проживания:
                       </td>
                       <td>
-                        <span class="font-weight-bold font-alter"
-                          >+7 916 777 77 77</span
+                        <span class="font-weight-bold"
+                          ><span class="font-alter"
+                            >+7 916 777 77 77</span
+                          ></span
                         >
                       </td>
                     </tr>
@@ -149,8 +158,10 @@
                     <tr>
                       <td>Номер телефона заявителя:</td>
                       <td>
-                        <span class="font-weight-bold font-alter"
-                          >+7 926 406 25 05</span
+                        <span class="font-weight-bold"
+                          ><span class="font-alter"
+                            >+7 926 406 25 05</span
+                          ></span
                         >
                         <img src="img/whatsapp.svg" class="ml-4 mr-4" alt="" />
                         <img src="img/viber.svg" alt="" />
