--- a/src/insurance-case2.html
+++ b/src/insurance-case2.html
@@ -46,17 +46,15 @@
                     <tr>
                       <td>Номер полиса:</td>
                       <td>
-                        <span class="font-weight-bold "
-                          ><span class="font-alter"
-                            >001-169-093412/19</span
-                          ></span
+                        <span class="font-weight-bold font-alter"
+                          >001-169-093412/19</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Страховая компания::</td>
                       <td>
-                        <span class="font-weight-bold"
+                        <span class="font-weight-bold font-alter"
                           >Абсолют Страхование</span
                         >
                       </td>
@@ -64,45 +62,47 @@
                     <tr>
                       <td>Период действия полиса:</td>
                       <td>
-                        <span class="font-weight-bold"
-                          >с <span class="font-alter">2019-12-15</span> по
-                          <span class="font-alter">2020-01-17</span> (Годовой
-                          полис)</span
+                        <span class="font-weight-bold font-alter"
+                          >с 2019-12-15 по 2020-01-17 (Годовой полис)</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Дата пересечения границы (выезд с ПМЖ):</td>
                       <td>
-                        <span class="font-weight-bold"
-                          ><span class="font-alter">2019-12-13</span></span
+                        <span class="font-weight-bold font-alter"
+                          >2019-12-13</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Фамилия и Имя застрахованного, кому нужна помощь:</td>
-                      <td><span class="font-weight-bold">Ivanov Ivan</span></td>
+                      <td>
+                        <span class="font-weight-bold font-alter"
+                          >Ivanov Ivan</span
+                        >
+                      </td>
                     </tr>
                     <tr>
                       <td>Дата рождения застрахованного:</td>
                       <td>
-                        <span class="font-weight-bold"
-                          ><span class="font-alter">1985-12-18</span></span
+                        <span class="font-weight-bold font-alter"
+                          >1985-12-18</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Дата наступления страхового случая:</td>
                       <td>
-                        <span class="font-weight-bold"
-                          ><span class="font-alter">2019-12-17</span></span
+                        <span class="font-weight-bold font-alter"
+                          >2019-12-17</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Причина обращения(жалобы):</td>
                       <td>
-                        <span class="font-weight-bold"
+                        <span class="font-weight-bold font-alter"
                           >Поранил большой палец левой ноги, сломал ноготь,
                           болит</span
                         >
@@ -111,25 +111,24 @@
                     <tr>
                       <td>Место наступления страхового случая:</td>
                       <td>
-                        <span class="font-weight-bold"
-                          >Italy, Milan, Via Perugino,
-                          <span class="font-alter">12</span></span
+                        <span class="font-weight-bold font-alter"
+                          >Italy, Milan, Via Perugino, 12</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Отель, апартаменты, номер комнаты:</td>
                       <td>
-                        <span class="font-weight-bold">Hotel Perugino</span>
+                        <span class="font-weight-bold font-alter"
+                          >Hotel Perugino</span
+                        >
                       </td>
                     </tr>
                     <tr>
                       <td>Номер телефона для связи с застрахованным:</td>
                       <td>
-                        <span class="font-weight-bold"
-                          ><span class="font-alter"
-                            >+7 916 777 77 77</span
-                          ></span
+                        <span class="font-weight-bold font-alter"
+                          >+7 916 777 77 77</span
                         >
                         <img src="img/whatsapp.svg" class="ml-4 mr-4" alt="" />
                         <img src="img/viber.svg" alt="" />
@@ -140,28 +139,30 @@
                         Номер телефона застрахованного в стране проживания:
                       </td>
                       <td>
-                        <span class="font-weight-bold"
-                          ><span class="font-alter"
-                            >+7 916 777 77 77</span
-                          ></span
+                        <span class="font-weight-bold font-alter"
+                          >+7 916 777 77 77</span
                         >
                       </td>
                     </tr>
                     <tr>
                       <td>Фамилия и Имя заявителя страхового случая:</td>
-                      <td><span class="font-weight-bold">Ivanov Ivan</span></td>
+                      <td>
+                        <span class="font-weight-bold font-alter"
+                          >Ivanov Ivan</span
+                        >
+                      </td>
                     </tr>
                     <tr>
                       <td>Кем приходится заявитель застрахованному:</td>
-                      <td><span class="font-weight-bold">Отец</span></td>
+                      <td>
+                        <span class="font-weight-bold font-alter">Отец</span>
+                      </td>
                     </tr>
                     <tr>
                       <td>Номер телефона заявителя:</td>
                       <td>
-                        <span class="font-weight-bold"
-                          ><span class="font-alter"
-                            >+7 926 406 25 05</span
-                          ></span
+                        <span class="font-weight-bold font-alter"
+                          >+7 926 406 25 05</span
                         >
                         <img src="img/whatsapp.svg" class="ml-4 mr-4" alt="" />
                         <img src="img/viber.svg" alt="" />
