--- a/src/blocks/main-promo/main-promo.html
+++ b/src/blocks/main-promo/main-promo.html
@@ -7,11 +7,7 @@
       </div>
 
       <div class="input-group search-promo search-promo--main">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Введите страну для поиска информации о помощи"
-        />
+        <input type="text" class="form-control search-promo__input" />
         <button class="search-promo__btn">
           <img src="img/search.svg" alt="" />
         </button>
