--- a/src/blocks/page-footer/page-footer--static.html
+++ b/src/blocks/page-footer/page-footer--static.html
@@ -81,8 +81,11 @@
                 Каретный, д.<span class="font-alter">20/3</span> (<span
                   class="font-alter"
                   >1</span
-                >, <span class="font-alter">2</span>-ой подъезд),
-                <span class="font-alter">3</span> этаж
+                >,&nbsp;
+                <span class="text-nowrap"
+                  ><span class="font-alter">2</span>-ой</span
+                >
+                подъезд), <span class="font-alter">3</span> этаж
               </div>
             </div>
 
@@ -92,7 +95,9 @@
               <p class="text-danger text-nowrap">
                 Круглосуточная телефонная линия
               </p>
-              <a href="#" class="h3 text-white font-alter">8 (495) 987–17–75</a>
+              <a href="#" class="h3 text-white font-alter text-nowrap"
+                >8 (495) 987–17–75</a
+              >
               <p class="text-white-50">в Москве</p>
             </div>
 
@@ -128,7 +133,8 @@
         <div class="page-footer__info__row">
           <div class="page-footer__info__block">
             <p class="text-white-50">
-              © Savitar group, <span class="font-alter">2008–2020</span>
+              © Savitar group,
+              <span class="font-alter text-nowrap">2008–2020</span>
             </p>
           </div>
           <div class="page-footer__info__block some page-footer__info__some">
