--- a/src/blocks/page-header/page-header--static.html
+++ b/src/blocks/page-header/page-header--static.html
@@ -73,7 +73,7 @@
             class="btn btn-light btn-select page-header__phone"
           >
             <img src="img/phone-grey.svg" class="icon" alt="" />
-            <span class="font-alter">+7 (495) 987-17-75</span>
+            <span class="font-alter text-nowrap">+7 (495) 987-17-75</span>
 
             <select class="bootstrap-select bootstrap-select__promo">
               <option value="moscow">
