--- a/src/insurance-case.html
+++ b/src/insurance-case.html
@@ -75,7 +75,7 @@
                     <div class="col-12 col-lg-6">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control font-alter"
                         placeholder="ХХХХХХХХХХХХХХ"
                       />
                     </div>
@@ -90,7 +90,7 @@
                     <div class="col-12 col-lg-6">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control font-alter"
                         placeholder="Название страховой компании"
                       />
                     </div>
@@ -109,7 +109,7 @@
                             <div class="input-group date" id="datetimepicker1">
                               <input
                                 type="text"
-                                class="form-control"
+                                class="form-control font-alter"
                                 placeholder="ХХ-ХХ-ХХXX"
                               />
                               <span class="input-group-addon">
@@ -123,7 +123,7 @@
                             <div class="input-group date" id="datetimepicker2">
                               <input
                                 type="text"
-                                class="form-control"
+                                class="form-control font-alter"
                                 placeholder="ХХ-ХХ-ХХXX"
                               />
                               <span class="input-group-addon">
@@ -165,7 +165,7 @@
                             <div class="input-group date" id="datetimepicker3">
                               <input
                                 type="text"
-                                class="form-control"
+                                class="form-control font-alter"
                                 placeholder="ХХ-ХХ-ХХXX"
                               />
                               <span class="input-group-addon">
@@ -187,7 +187,7 @@
                     <div class="col-12 col-lg-6">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control font-alter"
                         placeholder="Ivanov Ivan"
                       />
                     </div>
@@ -208,7 +208,7 @@
                             >
                               <input
                                 type="text"
-                                class="form-control"
+                                class="form-control font-alter"
                                 placeholder="ХХ-ХХ-ХХXX"
                               />
                               <span class="input-group-addon">
@@ -236,7 +236,7 @@
                             >
                               <input
                                 type="text"
-                                class="form-control"
+                                class="form-control font-alter"
                                 placeholder="ХХ-ХХ-ХХXX"
                               />
                               <span class="input-group-addon">
@@ -258,7 +258,7 @@
                     <div class="col-12 col-lg-6">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control font-alter"
                         placeholder="Поранил палец"
                       />
                     </div>
@@ -276,7 +276,7 @@
                           <div class="form-group">
                             <input
                               type="text"
-                              class="form-control"
+                              class="form-control font-alter"
                               placeholder="Страна, город, улица, дом, № квартиры"
                             />
                           </div>
@@ -300,7 +300,7 @@
                     <div class="col-12 col-lg-6">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control font-alter"
                         placeholder="Название отеля, номер апартаментов, комнаты"
                       />
                     </div>
@@ -317,7 +317,7 @@
                         <div class="col-12 col-lg-5 mb-5 mb-lg-0">
                           <input
                             type="text"
-                            class="form-control"
+                            class="form-control font-alter"
                             placeholder="+ Х ХХХ ХХХ ХХ ХХ"
                           />
                         </div>
@@ -364,7 +364,7 @@
                     <div class="col-12 col-lg-6">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control font-alter"
                         placeholder="+ Х ХХХ ХХХ ХХ ХХ"
                       />
                     </div>
@@ -379,7 +379,7 @@
                     <div class="col-12 col-lg-6">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control font-alter"
                         placeholder="Ivanov Ivan"
                       />
                     </div>
@@ -394,7 +394,7 @@
                     <div class="col-12 col-lg-6">
                       <input
                         type="text"
-                        class="form-control"
+                        class="form-control font-alter"
                         placeholder="Мать, отец, бабушка, сам заявитель"
                       />
                     </div>
@@ -411,7 +411,7 @@
                         <div class="col-12 col-lg-5 mb-5 mb-lg-0">
                           <input
                             type="text"
-                            class="form-control"
+                            class="form-control font-alter"
                             placeholder="+ Х ХХХ ХХХ ХХ ХХ"
                           />
                         </div>
